# vo-marionette

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  paket.dependencies
injector/: CMakeLists.txt
injector/controller/: Automator.cs  CMakeLists.txt  Main.cs  main.cs  paket.references
injector/hook/: CMakeLists.txt  Main.cs  VoMarionetteHook.snk
injector/hook/Properties/: AssemblyInfo.cs
injector/profiler/: CMakeLists.txt  FunctionInfo.cpp  FunctionInfo.h  HakoniwaProfilerImpl.cpp  HakoniwaProfilerImpl.h  Trampoline.cpp  Trampoline.h  Tranpoline.cpp  Util.cpp  Util.h  VoMarionetteProfiler.idl  VoMarionetteProfilerBase.h  VoMarionetteProfilerImpl.cpp  VoMarionetteProfilerImpl.h  dllmain.cpp  factory.cpp  factory.h  main.cpp
